<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mensajeEmergente">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:text="@string/txt_nuevaLista"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/nameLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView12"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txt_entrada"
        android:textColor="#000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLista"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:onClick="crearLista"
        android:text="@string/txt_aceptar"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLista"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="cancelar"
        android:text="@string/txt_cancelar"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#000000"
        android:textStyle="bold"
        app:backgroundTint="@color/teal_700" />
</RelativeLayout>