<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearUsuario">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="394dp"
        android:layout_height="662dp"
        android:layout_below="@+id/text_tit"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/txt_view_usuario"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/txt_nom_usu"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_entrada"
                android:inputType="textPersonName"
                android:text="@string/txt_entrada"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/txt_view_contraseña"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/txt_contra_usu"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_entrada"
                android:inputType="textPassword"
                android:text="@string/txt_entrada"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="143dp"
                android:layout_height="30dp"
                android:text="@string/txt_Repetir_c"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/txt_contra_usu2"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_entrada"
                android:inputType="textPassword"
                android:text="@string/txt_entrada"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_entrada" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/txt_preguntas"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="183dp"
                android:layout_height="30dp"
                android:text="@string/txt_pre1"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/txt_resp1"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_entrada"
                android:inputType="textPersonName"
                android:text="@string/txt_entrada"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/txt_pre2"
                android:textColor="#000000" />

            <EditText
                android:id="@+id/txt_resp2"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txt_entrada"
                android:inputType="textPersonName"
                android:text="@string/txt_entrada"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="295dp"
                android:layout_height="30dp"
                android:text="@string/txt_pre3"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_cuadrado"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/description"
                    android:onClick="figuraSeleccionada"
                    app:srcCompat="@mipmap/cuadra" />

                <ImageView
                    android:id="@+id/btn_triangulo"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="figuraSeleccionada"
                    app:srcCompat="@mipmap/tr1" />

                <ImageView
                    android:id="@+id/btn_estrella"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/description"
                    android:onClick="figuraSeleccionada"
                    app:srcCompat="@mipmap/star1" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_crear_u"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="88dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="112dp"
                android:layout_marginRight="112dp"
                android:onClick="registrarUsuario"
                android:text="@string/txt_view_Crear"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                app:backgroundTint="@color/teal_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.53"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                app:layout_constraintVertical_bias="0.61" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/text_tit"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/titulo_Crear_u"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.221"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />



</RelativeLayout>